force-app/main/default/objects/Apttus__ClauseApproval__c/Apttus__ClauseApproval__c.object-meta.xml
<CustomObject>
    <description>Allows you to set up clause level approval process</description>
    <label>Clause Approval</label>
    <nameField>
        <label>Clause Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clause Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>