force-app/main/default/objects/Apttus__ClauseApproval__c/fields/Apttus__Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Action__c</fullName>
    <description>Select a clause action in a document during a negotiation</description>
    <inlineHelpText>Select a clause action in a document during a negotiation</inlineHelpText>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alternate</fullName>
            </value>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>