force-app/main/default/objects/Apttus__ClauseApproval__c/fields/Apttus__AgreementId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AgreementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the agreement associated with the clause approval</description>
    <inlineHelpText>ID of the agreement associated with the clause approval</inlineHelpText>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Clause Approvals</relationshipLabel>
    <relationshipName>ClauseApprovals</relationshipName>
    <type>Lookup</type>
</CustomField>