force-app/main/default/objects/Apttus__ClauseApproval__c/fields/Apttus__ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ApprovalStatus__c</fullName>
    <defaultValue>&quot;Not Submitted&quot;</defaultValue>
    <description>Clause approval status</description>
    <inlineHelpText>Set an approval status</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Approval Required</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>