force-app/main/default/objects/Apttus__ClauseApproval__c/fields/Apttus__ClauseId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ClauseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the clause used to setup an approval process</description>
    <inlineHelpText>ID of the clause used to setup an approval process</inlineHelpText>
    <label>Clause</label>
    <referenceTo>Apttus__APTS_Template__c</referenceTo>
    <relationshipLabel>Clause Approvals</relationshipLabel>
    <relationshipName>ClauseApprovals</relationshipName>
    <type>Lookup</type>
</CustomField>