force-app/main/default/objects/Apttus__ClauseApproval__c/fields/Apttus__DocumentVersionId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentVersionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the document version for the clause approval</description>
    <inlineHelpText>ID of the document version for the clause approval</inlineHelpText>
    <label>Document Version</label>
    <referenceTo>Apttus__DocumentVersion__c</referenceTo>
    <relationshipLabel>Clause Approvals</relationshipLabel>
    <relationshipName>ClauseApprovals</relationshipName>
    <type>Lookup</type>
</CustomField>